# blackjack-cv

./: .gitignore  README.md  requirements.txt
backend/: pyproject.toml
backend/src/: api.py  card_counter.py  card_detector.py  main.py  models.py  strategy.py  strategy_tables.py  testing_framework.py
frontend/: package-lock.json  package.json
