[tool.poetry]
name = "blackjack-cv"
version = "0.1.0"
description = "Blackjack computer vision"
authors = ["Vichu Selvaraju <vichuselvaraju@gmail.com>"]
readme = "README.md"
packages = [{include = "blackjack_cv"}]

[tool.poetry.dependencies]
python = "^3.11"
opencv-python = "^4.12.0.88"
pillow = "^11.3.0"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
websockets = "^15.0.1"
pydantic = "^2.11.7"
python-multipart = "^0.0.20"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
black = "^25.1.0"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
